# fastapi_todo_app

./: .gitignore  Makefile  __init__.py  alembic.ini  database.py  main.py  models.py  pyproject.toml  requests.py
migrations/: env.py
migrations/versions/: 3ff9d816719e_base_db.py
routers/: admin.py  auth.py  todos.py
